Bug 70772 - flexbox scrollbars don't take flex-direction into account
Summary: flexbox scrollbars don't take flex-direction into account
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tony Chang
URL:
Keywords:
Depends on:
Blocks: 62048
  Show dependency treegraph
 
Reported: 2011-10-24 16:11 PDT by Ojan Vafai
Modified: 2012-01-27 10:12 PST (History)
2 users (show)

See Also:


Attachments
Patch (12.78 KB, patch)
2012-01-25 17:14 PST, Tony Chang
no flags Details | Formatted Diff | Diff
Patch (12.79 KB, patch)
2012-01-26 11:07 PST, Tony Chang
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Ojan Vafai 2011-10-24 16:11:27 PDT
At a minimum, I'm pretty sure we don't take flex-flow into account when getting the height/width of the scrollbars.
Comment 1 Tony Chang 2012-01-25 17:14:45 PST
Created attachment 124039 [details]
Patch
Comment 2 Darin Adler 2012-01-26 10:57:08 PST
Comment on attachment 124039 [details]
Patch

It’s traditional to name bug reports after the bug. It’s OK to have a bug tracking adding tests, but not so great for clarity to name it that and then fix a bug in it.
Comment 3 Tony Chang 2012-01-26 11:07:11 PST
Created attachment 124151 [details]
Patch
Comment 4 Tony Chang 2012-01-26 11:07:57 PST
Comment on attachment 124151 [details]
Patch

I'll wait a while to give Ojan a chance to take a look.
Comment 5 Ojan Vafai 2012-01-26 12:30:07 PST
(In reply to comment #4)
> (From update of attachment 124151 [details])
> I'll wait a while to give Ojan a chance to take a look.

LGTM
Comment 6 WebKit Review Bot 2012-01-27 10:12:22 PST
Comment on attachment 124151 [details]
Patch

Clearing flags on attachment: 124151

Committed r106129: <http://trac.webkit.org/changeset/106129>
Comment 7 WebKit Review Bot 2012-01-27 10:12:26 PST
All reviewed patches have been landed.  Closing bug.