flexbox scrollbars don't take flex-direction into account https://bugs.webkit.org/show_bug.cgi?id=70772

Reviewed by Darin Adler.

Source/WebCore:

This fixes a bug where we always used the logicalScrollbarHeight.
For column flow, this was incorrect.

Also fix a bug where we didn't include the trailing border+padding+scrollbar when computing the
height of a column flow.

Tests: css3/flexbox/cross-axis-scrollbar-expected.html
       css3/flexbox/cross-axis-scrollbar.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::crossAxisScrollbarExtent): Add a direction aware method for getting the scrollbar size.
(WebCore):
(WebCore::RenderFlexibleBox::layoutAndPlaceChildren): Use crossAxisScrollbarExtent.
* rendering/RenderFlexibleBox.h:
(RenderFlexibleBox):

LayoutTests:

* css3/flexbox/cross-axis-scrollbar-expected.html: Added.
* css3/flexbox/cross-axis-scrollbar.html: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@106129 bbb929c8-8fbe-4397-9dbb-9b2b20218538